chenged code css

--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>To Do List - Local Storage</title>
+  <title> To Do List</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+<h1>ToDoList</h1>
+<div class="flex_Wrapper">
+  <div class="add_todo_wrapper">
+    <div class="input_wrapper">
+      <input type="text" id="description_task">
+    </div>
+    <div class="button_wrapper">
+      <button id="add_task_btn">Ade</button>
+    </div>
+  </div>
+  <h2>Task for the day</h2>
+  <div class="todos_wrapper">
+
+  </div>
+</div>
+<script src="main.js"></script>
 </body>
 </html>
